Tue Feb 26 21:36:01 2002  Usaku Nakamura <usa@ruby-lang.org>

	* bignum.c (rb_big_2comp): void function cannot return any value.

Tue Feb 26 11:25:50 2002  akira yamada  <akira@arika.org>

	* lib/uri/generic.rb: merge0 shuld return [oth, oth] if oth is
	  absolute URI. 

	* lib/uri/generic.rb: registry part must not be allowed for any
	  schemes for the Internet. (RFC2396, section 3.2.2 and 3.2.1.) 

Mon Feb 25 21:28:46 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Merge from rough.  Turn Syslog into a
	  module keeping backward compatibility intact.

Mon Feb 25 19:35:48 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* process.c (rb_syswait): argument order of rb_waitpid() inverted.

	* sample/test.rb (system): test with scripts under the source
	  directory.

Mon Feb 25 13:32:13 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/shell.rb (Shell::expand_path): relative to @cwd.

Sun Feb 24 17:20:50 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/*.h: Merge from rough.
	  - Avoid namespace pollution. (MD5_* -> rb_Digest_MD5_*, etc.)

Sat Feb 23 21:12:13 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* process.c (rb_syswait): thread kludge; should be fixed to
	  support native thread.

Fri Feb 22 22:00:08 2002  Minero Aoki  <aamine@loveruby.net>

	* lib/net/protocol.rb: set read_timeout dynamically.

Fri Feb 22 19:59:33 2002  Usaku Nakamura <usa@ruby-lang.org>

	* win32/config.status.in: set LIBRUBY_SO.

Fri Feb 22 03:34:38 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (get2comp): need to specify to carry or not.

Wed Feb 20 15:15:03 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* intern.h: prototypes; rb_io_addstr(), rb_io_printf(),
	  rb_io_print(), rb_io_puts()

	* io.c (rb_io_addstr): make extern.

	* io.c (rb_io_printf): ditto.

	* io.c (rb_io_print): ditto.

	* io.c (rb_io_puts): ditto.

Wed Feb 20 12:41:59 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
